--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
         "after": true
       }
     ],
+    "react/prop-types": 0,
     "curly": "error",
     "eqeqeq": ["error", "always"],
     "getter-return": ["error", { "allowImplicit": true }],
