--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "devDependencies": {
     "eslint": "^5.8.0",
+    "eslint-plugin-react": "^7.11.1",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0"
   }
