--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "./node_modules/.bin/eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -24,6 +25,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0"
   }
