--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "smash_brothers",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jakelauer27.github.io/smash_brothers",
   "dependencies": {
     "@jake.lauer27/autocomplete": "^1.1.1",
     "react": "^16.6.0",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,8 +28,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.8.0",
     "eslint-plugin-react": "^7.11.1",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0"
   }
